--- a/src/components/atoms/expense-viewer/style.css
+++ b/src/components/atoms/expense-viewer/style.css
@@ -26,3 +26,17 @@
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+
+@media screen and (max-width: 200px) {
+  .expense-viewer {
+    flex-direction: column;
+  }
+
+  .label {
+    border-radius: 4px;
+  }
+
+  .value {
+    border-radius: 4px;
+  }
+}
